--- a/index.html
+++ b/index.html
@@ -1,15 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-eidth, initial-scale=1.0" />
+    <title>Lampung Travel</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-eidth, initial-scale=1.0">
-    <title> Document </title>
-    <link rel="rel=stylesheet" href="css\style.css">
-</head>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap"
+      rel="stylesheet"
+    />
 
-<body>
+    <!-- Feather icons -->
+    <script src="https://unpkg.com/feather-icons"></script>
 
-</body>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css\style.css" />
+  </head>
 
+
+  <body>
+
+    <!-- Navbar -->
+    <nav>
+        <a href="#" class="logo-icon">T<span>RAVEL</span></a>
+
+      <div class="nav-item">
+        <a href="#" >Home</a>
+        <a href="#" >Tentang kami</a>
+        <a href="#" >Destinasi Favorit</a>
+        <a href="#" >Bantuan</a>
+      </div>
+
+      <div class="navbar-extra">
+        <a href="#" id="search"><i data-feather="search"></i></a>
+        <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
+
+      </div>
+    </nav>
+    <hr />
+    <main>
+      <article>
+        <header>
+          <h1>Welcome to our website</h1>
+        </header>
+        <p>Lorem Ipsum</p>
+        <div class="banner-img"></div>
+      </article>
+      <hr />
+      <section>
+        <header>
+          <h1>About</h1>
+        </header>
+        <section class="profile-container">
+          <div class="profile-item">
+            <div class="profile-img"></div>
+            <h2>Software Engineer</h2>
+          </div>
+
+          <div class="profile-item">
+            <div class="profile-img"></div>
+            <h2>Software Engineer</h2>
+          </div>
+
+          <div class="profile-item">
+            <div class="profile-img"></div>
+            <h2>Software Engineer</h2>
+          </div>
+        </section>
+      </section>
+
+      <section>
+        <form></form>
+
+        <div></div>
+      </section>
+    </main>
+
+    <footer>
+      <p>Made by :3</p>
+    </footer>
+
+    <!-- Feather icons -->
+    <script>
+        feather.replace();
+      </script>
+
+      <!-- Js -->
+       <script src="js/script.js"></script>
+  </body>
 </html>
