--- a/index.html
+++ b/index.html
@@ -20,40 +20,40 @@
     <link rel="stylesheet" href="css\style.css" />
   </head>
 
-
   <body>
-
     <!-- Navbar -->
     <nav>
-        <a href="#" class="logo-icon">T<span>RAVEL</span></a>
+      <a href="#" class="logo-icon">T<span>RAVEL</span></a>
 
       <div class="nav-item">
-        <a href="#" >Home</a>
-        <a href="#" >Tentang kami</a>
-        <a href="#" >Destinasi Favorit</a>
-        <a href="#" >Bantuan</a>
+        <a href="#home">Home</a>
+        <a href="#about">Tentang kami</a>
+        <a href="#destinasi">Destinasi Favorit</a>
+        <a href="#help">Bantuan</a>
       </div>
 
       <div class="navbar-extra">
         <a href="#" id="search"><i data-feather="search"></i></a>
         <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
-
       </div>
     </nav>
-    <hr />
+
+    <!-- Hero section -->
+    <section class="hero" id="home">
+        <main class="content">
+      <h1>Hello! Welcome to <span>Lampung</span></h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
+        molestiae.
+      </p>
+      <a href="#destinasi" class="cta">Explore Now!</a>
+    </main>
+    </section>
+
+    <!-- About section -->
     <main>
-      <article>
-        <header>
-          <h1>Welcome to our website</h1>
-        </header>
-        <p>Lorem Ipsum</p>
-        <div class="banner-img"></div>
-      </article>
-      <hr />
-      <section>
-        <header>
-          <h1>About</h1>
-        </header>
+      <section id="about" class="about">
+          <h2>Tentang Kami</h2>
         <section class="profile-container">
           <div class="profile-item">
             <div class="profile-img"></div>
@@ -85,10 +85,10 @@
 
     <!-- Feather icons -->
     <script>
-        feather.replace();
-      </script>
+      feather.replace();
+    </script>
 
-      <!-- Js -->
-       <script src="js/script.js"></script>
+    <!-- Js -->
+    <script src="js/script.js"></script>
   </body>
 </html>
