--- a/index.html
+++ b/index.html
@@ -12,46 +12,28 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet" />
 
-  <!-- Feather icons -->
-  <script src="https://unpkg.com/feather-icons"></script>
-
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
   <!-- Navbar -->
-  <nav>
-    <div>
-      <a href="#home" class="logo-icon">T<span>RAVEL</span></a>
-    </div>
 
-    <div class="nav-item">
-      <a href="#home">Home</a>
-      <a href="#about">Tentang kami</a>
-      <a href="#destinasi">Destinasi Favorit</a>
-      <a href="#help">Bantuan</a>
+  <header>
+    <a href="#home" class="logo-icon">T<span>RAVEL</span></a>
+    <div class="menu-btn"></div>
+    <div class="navigation">
+      <div class="nav-item">
+        <a href="#home">Home</a>
+        <a href="#about">Tentang kami</a>
+        <a href="#destinasi">Destinasi Favorit</a>
+        <a href="#help">Bantuan</a>
+      </div>
     </div>
-
-    <div class="navbar-extra">
-      <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
-    </div>
-  </nav>
+  </header>
 
   <!-- Hero section -->
-  <section class="hero" id="home">
-
-    <!-- image slider -->
-    <img class="slide" src="img/way-kambas.jpg"></img>
-    <img class="slide" src="img/danau-toba.jpg"></img>
-    <img class="slide" src="img/pantai-trikora.jpg"></img>
-    <img class="slide" src="img/pasar-apung.jpg"></img>
-    <div class="slider-navigation">
-      <span class="slider active" dara-src="img/way-kambas.jpg"></span>
-      <span class="slider" data-src="img/3.jpg"></span>
-      <span class="slider" data-src="img/5.webp"></span>
-      <span class="slider" data-src="img/1.jpg"></span>
-    </div>
+  <section class="home" id="home">
     <div class="content">
       <h1>
         Hello! <span id="name"> </span> Welcome to <span>Indonesia</span>
@@ -61,9 +43,19 @@
         molestiae.
       </p>
       <a href="#destinasi" class="cta">Explore Now!</a>
-      <button type="button" class="cta" onclick="nextSlide(1)">Next Slide</button>
     </div>
-    
+    <img class="img-slide" src="img/way-kambas.jpg"></img>
+
+    <!-- image slider -->
+    <div class=".slider-navigation">
+      <div clas="nav-btn" data-src="img/way-kambas.jpg" alt="Image 1"></div>
+      <div clas="nav-btn" data-src="img/danau-toba.jpg" alt="Image 2"></div>
+      <div clas="nav-btn" data-src="img/pantai-trikora.jpg" alt="Image 3"></div>
+      <div clas="nav-btn" data-src="img/pasar-apung.jpg" alt="Image 4"></div>
+    </div>
+
+
+
 
 
   </section>
@@ -98,9 +90,9 @@
   </main>
 
   <section id="message">
-    <header>
-      <h1>Message Us</h1>
-    </header>
+    <!-- <header>
+    <h1>Message Us</h1>
+  </header> -->
 
     <div class="form-container">
       <div class="form">
@@ -111,19 +103,9 @@
           <input type="date" name="tanggal-lahir" /><br />
 
           Jenis Kelamin: <br />
-          <input
-            type="radio"
-            id="laki-laki"
-            name="jenis-kelamin"
-            value="laki-laki"
-          />
+          <input type="radio" id="laki-laki" name="jenis-kelamin" value="laki-laki" />
           <label for="laki-laki">Laki-laki</label>
-          <input
-            type="radio"
-            id="peremuan"
-            name="jenis-kelamin"
-            value="perempuan"
-          />
+          <input type="radio" id="peremuan" name="jenis-kelamin" value="perempuan" />
           <label for="perempuan">Perempuan</label><br />
 
           Pesan:
