--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-eidth, initial-scale=1.0" />
 
-  <title>Lampung Travel</title>
+  <title>Indonesia Travel</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,9 +23,9 @@
     <a href="#home" class="logo-icon">T<span>RAVEL</span></a>
     <div class="menu-btn"></div>
     <div class="navigation">
-      <div class="nav-item">
+      <div class="navigation-items">
         <a href="#home">Home</a>
-        <a href="#about">Tentang kami</a>
+        <a href="#artikel">Artikel</a>
         <a href="#destinasi">Destinasi Favorit</a>
         <a href="#help">Bantuan</a>
       </div>
@@ -34,99 +34,172 @@
 
   <!-- Hero section -->
   <section class="home" id="home">
-    <div class="content">
+    <img class="img-slide active" src="img/danau-toba.jpg"></img>
+    <img class="img-slide" src="img/pantai-trikora.jpg"></img>
+    <img class="img-slide" src="img/way-kambas.jpg"></img>
+    <img class="img-slide" src="img/pasar-apung.jpg"></img>
+    <div class="content active">
       <h1>
         Hello! <span id="name"> </span> Welcome to <span>Indonesia</span>
       </h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
-        molestiae.
-      </p>
-      <a href="#destinasi" class="cta">Explore Now!</a>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+        id est laborum.</p>
+      <a href="#">Read More</a>
     </div>
-    <img class="img-slide" src="img/way-kambas.jpg"></img>
-
-    <!-- image slider -->
-    <div class=".slider-navigation">
-      <div clas="nav-btn" data-src="img/way-kambas.jpg" alt="Image 1"></div>
-      <div clas="nav-btn" data-src="img/danau-toba.jpg" alt="Image 2"></div>
-      <div clas="nav-btn" data-src="img/pantai-trikora.jpg" alt="Image 3"></div>
-      <div clas="nav-btn" data-src="img/pasar-apung.jpg" alt="Image 4"></div>
+    <div class="content">
+      <h1>Camping.<br><span>Enjoy</span></h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+        id est laborum.</p>
+      <a href="#">Read More</a>
     </div>
-
-
-
-
-
+    <div class="content">
+      <h1>Adventures.<br><span>Off Road</span></h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+        id est laborum.</p>
+      <a href="#">Read More</a>
+    </div>
+    <div class="content">
+      <h1>Road Trip.<br><span>Together</span></h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+        id est laborum.</p>
+      <a href="#">Read More</a>
+    </div>
+    <div class="slider-navigation">
+      <div class="nav-btn active"></div>
+      <div class="nav-btn"></div>
+      <div class="nav-btn"></div>
+      <div class="nav-btn"></div>
+    </div>
+    </div>
   </section>
 
   <!-- About section -->
   <main>
-    <section id="about" class="about">
-      <h2>Tentang Kami</h2>
-      <section class="profile-container">
-        <div class="profile-item">
-          <div class="profile-img"></div>
-          <h2>Software Engineer</h2>
-        </div>
 
-        <div class="profile-item">
-          <div class="profile-img"></div>
-          <h2>Software Engineer</h2>
+    <section id="artikel">
+      <div class="art">
+        <h2>Artikel Pilihan</h2>
+      </div>
+      <section class="article-section">
+        <div class="article-img">
+          <img src="img/images.jpeg" alt="Destinasi Favorit">
         </div>
-
-        <div class="profile-item">
-          <div class="profile-img"></div>
-          <h2>Software Engineer</h2>
+        <div class="article-text">
+          <h2>Candi Prambanan</h2>
+          <p>
+            Ini adalah deskripsi destinasi favorit yang menakjubkan.
+            Tempat ini menawarkan pemandangan indah dan pengalaman yang tak terlupakan.
+            Jangan lewatkan kesempatan untuk mengunjungi lokasi ini!
+          </p>
+        </div>
+        <div class="article-img">
+          <img src="img/istockphoto-675172642-612x612.jpg" alt="Destinasi Favorit">
+        </div>
+        <div class="article-text">
+          <h2>Destinasi Favorit</h2>
+          <p>
+            Ini adalah deskripsi destinasi favorit yang menakjubkan.
+            Tempat ini menawarkan pemandangan indah dan pengalaman yang tak terlupakan.
+            Jangan lewatkan kesempatan untuk mengunjungi lokasi ini!
+          </p>
+        </div>
+        <div class="article-img">
+          <img src="img/images.jpeg" alt="Destinasi Favorit">
+        </div>
+        <div class="article-text">
+          <h2>Destinasi Favorit</h2>
+          <p>
+            Ini adalah deskripsi destinasi favorit yang menakjubkan.
+            Tempat ini menawarkan pemandangan indah dan pengalaman yang tak terlupakan.
+            Jangan lewatkan kesempatan untuk mengunjungi lokasi ini!
+          </p>
         </div>
       </section>
     </section>
 
-    <section>
-      <form></form>
-
-      <div></div>
+    <!-- desinasi -->
+    <section id="destinasi">
+      <h2>Destinasi Favorit</h2>
+      <div class="gallery">
+        <div class="gallery-item">
+          <img src="img/1.jpg" alt="Destinasi 1">
+          <div class="gallery-info">
+            <h3>Destinasi 1</h3>
+            <p>Deskripsi singkat tentang destinasi 1.</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="img/2.jpg" alt="Destinasi 2">
+          <div class="gallery-info">
+            <h3>Destinasi 2</h3>
+            <p>Deskripsi singkat tentang destinasi 2.</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="img/3.jpg" alt="Destinasi 3">
+          <div class="gallery-info">
+            <h3>Destinasi 3</h3>
+            <p>Deskripsi singkat tentang destinasi 3.</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="img/5.webp" alt="Destinasi 4">
+          <div class="gallery-info">
+            <h3>Destinasi 4</h3>
+            <p>Deskripsi singkat tentang destinasi 4.</p>
+          </div>
+        </div>
+      </div>
     </section>
+
+    <section id="help">
+      <h2>Kirim Pesan</h2>
+      <div class="form-container">
+        <div class="form">
+          <form name="message-form" onsubmit="return validateform()">
+            Nama: <input placeholder="Nama" type="text" name="nama" /><br />
+
+            Jenis Kelamin: <br />
+            <input type="radio" id="laki-laki" name="jenis-kelamin" value="laki-laki" />
+            <label for="laki-laki">Laki-laki</label>
+            <input type="radio" id="perempuan" name="jenis-kelamin" value="perempuan" />
+            <label for="perempuan">Perempuan</label><br />
+
+            Pesan:
+            <textarea placeholder="Pesan anda" name="pesan"></textarea><br />
+
+            <input type="submit" value="Submit" />
+          </form>
+        </div>
+
+        <div class="output-form">
+          <p>Nama: <span id="sender-nama"></span></p>
+          <p>Jenis Kelamin: <span id="sender-jenis-kelamin"></span></p>
+          <p>Pesan: <span id="sender-pesan"></span></p>
+        </div>
+      </div>
+    </section>
+
   </main>
 
-  <section id="message">
-    <!-- <header>
-    <h1>Message Us</h1>
-  </header> -->
-
-    <div class="form-container">
-      <div class="form">
-        <form name="message-form" onsubmit="return validateform()">
-          Nama: <input placeholder="Nama" type="text" name="nama" /><br />
-
-          Tanggal Lahir :
-          <input type="date" name="tanggal-lahir" /><br />
-
-          Jenis Kelamin: <br />
-          <input type="radio" id="laki-laki" name="jenis-kelamin" value="laki-laki" />
-          <label for="laki-laki">Laki-laki</label>
-          <input type="radio" id="peremuan" name="jenis-kelamin" value="perempuan" />
-          <label for="perempuan">Perempuan</label><br />
-
-          Pesan:
-          <textarea placeholder="Pesan anda" name="pesan"></textarea><br />
-
-          <input type="submit" value="submit" />
-        </form>
-      </div>
-
-      <div class="output-form">
-        <p>Nama: <span id="sender-nama"></span></p>
-        <p>Tanggal Lahir: <span id="sender-tanggal-lahir"></span></p>
-        <p>Jenis Kelamin: <span id="sender-jenis-kelamin"></span></p>
-        <p>Pesan: <span id="sender-pesan"></span></p>
-      </div>
-    </div>
-  </section>
-
   <footer>
-    <p>Made by :3</p>
+    <div class="footer-content">
+      <p>&copy; 2024 by :3.</p>
+    </div>
   </footer>
+
 
   <!-- Feather icons -->
   <script>
