--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
   <!-- Hero section -->
   <section class="home" id="home">
-    <img class="img-slide active" src="img/danau-toba.jpg"></img>
-    <img class="img-slide" src="img/pantai-trikora.jpg"></img>
-    <img class="img-slide" src="img/way-kambas.jpg"></img>
-    <img class="img-slide" src="img/pasar-apung.jpg"></img>
+    <img class="img-slide active" src="img/9.jpg"></img>
+    <img class="img-slide" src="img/6.jpg"></img>
+    <img class="img-slide" src="img/18.jpeg"></img>
+    <img class="img-slide" src="img/19.jpg"></img>
     <div class="content active">
       <h1>
         Hello! <span id="name"> </span> Welcome to <span>Indonesia</span>
@@ -92,39 +92,48 @@
       <div class="art">
         <h2>Artikel Pilihan</h2>
       </div>
-      <section class="article-section">
-        <div class="article-img">
-          <img src="img/images.jpeg" alt="Destinasi Favorit">
-        </div>
-        <div class="article-text">
-          <h2>Candi Prambanan</h2>
-          <p>
-            Ini adalah deskripsi destinasi favorit yang menakjubkan.
-            Tempat ini menawarkan pemandangan indah dan pengalaman yang tak terlupakan.
-            Jangan lewatkan kesempatan untuk mengunjungi lokasi ini!
-          </p>
-        </div>
-        <div class="article-img">
-          <img src="img/istockphoto-675172642-612x612.jpg" alt="Destinasi Favorit">
-        </div>
-        <div class="article-text">
-          <h2>Destinasi Favorit</h2>
-          <p>
-            Ini adalah deskripsi destinasi favorit yang menakjubkan.
-            Tempat ini menawarkan pemandangan indah dan pengalaman yang tak terlupakan.
-            Jangan lewatkan kesempatan untuk mengunjungi lokasi ini!
-          </p>
-        </div>
-        <div class="article-img">
-          <img src="img/images.jpeg" alt="Destinasi Favorit">
-        </div>
-        <div class="article-text">
-          <h2>Destinasi Favorit</h2>
-          <p>
-            Ini adalah deskripsi destinasi favorit yang menakjubkan.
-            Tempat ini menawarkan pemandangan indah dan pengalaman yang tak terlupakan.
-            Jangan lewatkan kesempatan untuk mengunjungi lokasi ini!
-          </p>
+      <section>
+        <div class="article-section">
+
+          <div class="article">
+            <img src="img/10.jpeg" alt="Gambar Artikel 1" class="article-image">
+            <div class="article-text">
+              <h2>Candi Prambanan</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus sunt ullam totam vero quos eveniet
+                magni! Ipsa doloremque ex delectus perspiciatis ratione a exercitationem, assumenda sed quaerat,
+                laudantium ullam rerum.</p>
+            </div>
+          </div>
+
+          <div class="article">
+            <img src="img/11.jpg" alt="Gambar Artikel 2" class="article-image">
+            <div class="article-text">
+              <h2>Ulun Danu Bratan</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quaerat ipsam voluptates, iure atque
+                molestiae excepturi praesentium laboriosam nemo quae. Facilis praesentium laboriosam illo, perferendis
+                deserunt debitis officiis possimus a.</p>
+            </div>
+          </div>
+          <div class="article">
+            <img src="img/15.webp" alt="Gambar Artikel 1" class="article-image">
+            <div class="article-text">
+              <h2>Raja Ampat</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus sunt ullam totam vero quos eveniet
+                magni! Ipsa doloremque ex delectus perspiciatis ratione a exercitationem, assumenda sed quaerat,
+                laudantium ullam rerum.</p>
+            </div>
+          </div>
+
+          <div class="article">
+            <img src="img/17.webp" alt="Gambar Artikel 2" class="article-image">
+            <div class="article-text">
+              <h2>Bromo</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quaerat ipsam voluptates, iure atque
+                molestiae excepturi praesentium laboriosam nemo quae. Facilis praesentium laboriosam illo, perferendis
+                deserunt debitis officiis possimus a.</p>
+            </div>
+          </div>
+
         </div>
       </section>
     </section>
@@ -134,30 +143,65 @@
       <h2>Destinasi Favorit</h2>
       <div class="gallery">
         <div class="gallery-item">
-          <img src="img/1.jpg" alt="Destinasi 1">
+          <img src="img/4.jpg" alt="Destinasi 1">
           <div class="gallery-info">
-            <h3>Destinasi 1</h3>
+            <h3>Borobudur</h3>
             <p>Deskripsi singkat tentang destinasi 1.</p>
           </div>
         </div>
         <div class="gallery-item">
           <img src="img/2.jpg" alt="Destinasi 2">
           <div class="gallery-info">
-            <h3>Destinasi 2</h3>
+            <h3>Pantai Sebalang</h3>
             <p>Deskripsi singkat tentang destinasi 2.</p>
           </div>
         </div>
         <div class="gallery-item">
           <img src="img/3.jpg" alt="Destinasi 3">
           <div class="gallery-info">
-            <h3>Destinasi 3</h3>
+            <h3>Mutun</h3>
             <p>Deskripsi singkat tentang destinasi 3.</p>
           </div>
         </div>
         <div class="gallery-item">
           <img src="img/5.webp" alt="Destinasi 4">
           <div class="gallery-info">
-            <h3>Destinasi 4</h3>
+            <h3>Rio by the Beach</h3>
+            <p>Deskripsi singkat tentang destinasi 4.</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="img/12.webp" alt="Destinasi 2">
+          <div class="gallery-info">
+            <h3>Labuhan Bajo</h3>
+            <p>Deskripsi singkat tentang destinasi 2.</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="img/8.jpg" alt="Destinasi 3">
+          <div class="gallery-info">
+            <h3>Danau Toba</h3>
+            <p>Deskripsi singkat tentang destinasi 3.</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="img/7.jpg" alt="Destinasi 4">
+          <div class="gallery-info">
+            <h3>Pink Beach</h3>
+            <p>Deskripsi singkat tentang destinasi 4.</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="img/14.jpg" alt="Destinasi 3">
+          <div class="gallery-info">
+            <h3>Pasar Apung</h3>
+            <p>Deskripsi singkat tentang destinasi 3.</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="img/13.jpg" alt="Destinasi 4">
+          <div class="gallery-info">
+            <h3>Pulau Bintan</h3>
             <p>Deskripsi singkat tentang destinasi 4.</p>
           </div>
         </div>
